--- a/lab-01.Rmd
+++ b/lab-01.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Lab 01 - UK Attractions"
-author: "INSERT NAME HERE"
+author: "Sixing Zha"
 date: "`r Sys.Date()`"
 output: html_document
 ---
