--- a/lab-01.Rmd
+++ b/lab-01.Rmd
@@ -27,8 +27,13 @@ visitors <- read_csv("data/UK-visitor-numbers.csv")
 _How many tourist attractions are there in the data set?_
 
 ```{r Q1}
-visitors %>% count()
+## visitors %>% count()
 ```
+# 348 tourist attractions
+# attraction, admission, setting and region's data type is character; n_2021,n_2022: double
+# The Crown Estate, Windsor Great Park
+# National Museum of Scotland: free
+# 3 varibles
 
 ### Exercise a.
 
@@ -37,7 +42,7 @@ _Create a frequency table of the number of tourist attractions in the data set b
 ```{r Ex_a}
 # Delete the comment '#' symbol at the start of the next line and complete the code. 
 
-#visitors %>% count(_____)
+visitors %>% count(region, sort = TRUE)
 ```
 
 ### Exercise b.
@@ -47,7 +52,7 @@ _Create a frequency table by `admission` and `setting`._
 ```{r Ex_b}
 # Delete the comment '#' symbol at the start of the next line and complete the code.
 
-#visitors %>% count(_____, _____)
+visitors %>% count(admission, setting)
 ```
 
 
@@ -57,6 +62,7 @@ _What are the variable data types?_
 
 ```{r Q2_part1}
 class(visitors$n_2022)
+typeof(visitors$n_2022)
 ```
 
 ```{r Q2_part2}
@@ -77,9 +83,9 @@ visitors %>% arrange(desc(n_2022))
 
 _What are the top 10 most visited attractions in 2021?_
 ```{r Ex_c}
-#visitors %>% 
-#  arrange(____(____)) %>%
-#  head(n = ____)
+visitors %>% 
+arrange(desc(n_2021)) %>%
+head(n = 10)
 ```
 
 ## Question 4
@@ -96,7 +102,7 @@ visitors %>% filter(attraction == "National Museum of Scotland")
 _Which attraction had exactly 565,772 visitors in 2022?_
 
 ```{r Ex_d}
-#visitors %>% filter(___ == ____)
+visitors %>% filter(n_2022 == 565772)
 ```
 
 ### Exercise e.
@@ -104,9 +110,9 @@ _Which attraction had exactly 565,772 visitors in 2022?_
 _How many attraction had more than 1 million visitors in 2022?_
 
 ```{r Ex_e}
-#visitors %>% 
-#  filter(____) %>%
-#  count()
+visitors %>% 
+filter(n_2022 > 1000000) %>%
+count()
 ```
 
 ## Question 5
@@ -129,11 +135,11 @@ visitors %>%
 _How many attractions had between 50,000 and 100,000 visitors in 2022?_
 
 ```{r Ex_f}
-#visitors %>% 
-#  ____(
-#    ______,
-#    ______ ) %>%
-#  count()
+visitors %>% 
+  filter(
+    n_2022 >= 50000,
+    n_2022 <= 100000) %>%
+  count()
 ```
 
 ### Exercise g.
@@ -141,9 +147,9 @@ _How many attractions had between 50,000 and 100,000 visitors in 2022?_
 _How many regions have more than 50 tourist attraction in the data set? (Hint: You will need to tabulate the data before filtering.)_
 
 ```{r Ex_g}
-#visitors %>% 
-#  _____(region) %>%
-#  filter(______)
+visitors %>% 
+  count(region) %>%
+  filter(n >= 50)
 ```
 
 
