--- a/lab-01.Rmd
+++ b/lab-01.Rmd
@@ -174,11 +174,11 @@ visitors %>%
 _Perform the same calculation for the 2021 admissions data._
 
 ```{r Ex_h}
-#visitors %>% 
-#  ______(
-#    __________,
-#    __________
-#  )
+visitors %>% 
+  summarise(
+    mean2021 = mean(n_2021),
+    med2021 = median(n_2021)
+  )
 ```
 
 All values in the output are `NA`!
@@ -188,7 +188,7 @@ All values in the output are `NA`!
 _What does `NA` stand for and why are you getting this as your answer to the previous question._
 
 **Write your answer here**
-
+# NA represents there is no value of the varible.
 
 
 
@@ -197,7 +197,7 @@ _What does `NA` stand for and why are you getting this as your answer to the pre
 _Look at the help pages for the `mean()` and `median()` commands to see what the input argument `na.rm` does. Edit your code from exercise h so that it computes the summary statistics where data is available._
 
 **Write your answer here**
-
+# removes missing values from data if they are coded as NA.
 
 
 
@@ -219,7 +219,7 @@ visitors %>%
 _Observe in question 6 that the mean statistics across all settings are much larger than the corresponding median statistics. Discuss in your group what this suggests about the data._
 
 **Write your answer here**
-
+# for mean values, there are some integers which are extremely high(or low), therefore, the total number maybe very large, so the mean of the list is larger. The defination of median is the middle number in a sorted list of numbers. 
 
 
 
@@ -251,8 +251,8 @@ _How many tourist attractions are there in each of the 4 nations? From this, dis
 
 
 ```{r Ex_l}
-#________ %>%
-#  ______(_______)
+visitors_with_nations %>%
+  count(nation)
 ```
 
 
